syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
// import "finder-backend/protofiles/user.proto";
// ↑だとエラー吐かないけどprotocコマンドでerror吐く。とりあえず↓だと動く
import "user.proto";

option go_package = "./pb";

service FootPrintService {
  rpc GetFootPrints(GetFootPrintsReq) returns (GetFootPrintsRes) {}
  rpc GetUnreadCount(GetUnreadCountReq) returns (GetUnreadCountRes) {}
}

message GetFootPrintsReq {
  string current_user_uid = 1;
}

message GetFootPrintsRes {
  repeated FootPrint foot_prints = 1;
}

message GetUnreadCountReq {
  string current_user_uid = 1;
}

message GetUnreadCountRes {
  int64 unread_count = 1;
}

message FootPrint {
  uint64 id = 1;
  string visitor_uid = 2;
  User visitor = 3;
  string uesr_uid = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool unread = 7;
}
